fix dates and alignment

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -228,7 +228,7 @@ section.success {
     width: 100%;
     height: 20px;
     margin-top: -12px;
-    text-align: center;
+    text-align: center; 
     font-size: 20px;
     color: #fff;
 }
@@ -391,7 +391,7 @@ footer .footer-below {
     min-height: 100%;
     border: 0;
     border-radius: 0;
-    text-align: center;
+    text-align: left; /* originally: center */
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -400,6 +400,7 @@ footer .footer-below {
 .portfolio-modal .modal-content h2 {
     margin: 0;
     font-size: 3em;
+    text-align: center; /* title centered */
 }
 
 .portfolio-modal .modal-content img {
